<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="nc_settings">Settings</string>
    <string name="nc_server_url">Server address</string>
    <string name="nc_server_not_installed">Please finish your %1$s installation</string>
    <string name="nc_server_db_upgrade_needed">Please upgrade your %1$s database</string>
    <string name="nc_server_maintenance">Please bring your %1$s out of maintenance</string>
    <string name="nc_server_version">%1$s only works with %2$s 13 and up</string>
    <string name="nc_server_import_account_plain">Import account</string>
    <string name="nc_server_import_accounts_plain">Import accounts</string>
    <string name="nc_server_import_account">Import account from the %1$s app</string>
    <string name="nc_server_import_accounts">Import accounts from the %1$s app</string>
    <string name="nc_server_failed_to_import_account">Failed to import selected account</string>
    <string name="nc_Server_account_imported">Selected account is now imported and available</string>
    <string name="nc_get_from_provider">Do you not have a server yet?\nClick here to get one from a provider</string>
    <string name="nc_push_disabled">Push notifications disabled</string>
    <string name="nc_capabilities_failed">Failed to fetch capabilities, aborting</string>
    <string name="nc_external_server_failed">Failed to fetch signaling settings</string>
    <string name="nc_display_name_not_fetched">Display name couldn\'t be fetched, aborting</string>
    <string name="nc_nextcloud_talk_app_not_installed">%1$s app not installed on the server, aborting</string>
    <string name="nc_display_name_not_stored">Could not store display name, aborting</string>
    <string name="nc_never">Never joined</string>
    <string name="nc_search">Search</string>
    <string name="nc_certificate_dialog_title">Check out the certificate</string>
    <string name="nc_certificate_dialog_text">Do you trust the until now unknown SSL certificate, issued by %1$s for %2$s, valid from %3$s to %4$s?</string>
    <string name="nc_yes">Yes</string>
    <string name="nc_no">No</string>
    <string name="nc_certificate_error">Your SSL setup prevented connection</string>
    <string name="nc_settings_proxy_title">Proxy</string>
    <string name="nc_settings_proxy_type_key" translatable="false">proxy_type</string>
    <string name="nc_settings_proxy_type_title">Proxy type</string>
    <string name="nc_settings_proxy_host_key" translatable="false">proxy_host</string>
    <string name="nc_settings_proxy_host_title">Proxy host</string>
    <string name="nc_settings_proxy_port_key" translatable="false">proxy_port</string>
    <string name="nc_settings_proxy_port_title">Proxy port</string>
    <string name="nc_settings_proxy_username_key" translatable="false">proxy_username</string>
    <string name="nc_settings_proxy_password_key" translatable="false">proxy_password</string>
    <string name="nc_settings_use_credentials_title">Use credentials</string>
    <string name="nc_settings_use_credentials_key" translatable="false">proxy_credentials</string>
    <string name="nc_settings_switch_account">Switch between accounts</string>
    <string name="nc_settings_reauthorize">Reauthorize</string>
    <string name="nc_client_cert_setup">Set up client certificate</string>
    <string name="nc_client_cert_change">Change client certificate</string>
    <string name="nc_settings_remove">Remove</string>
    <string name="nc_settings_remove_confirmation">Please confirm your intent to remove the current account.</string>
    <string name="nc_settings_remove_account">Remove account</string>
    <string name="nc_settings_add_account">Add a new account</string>
    <string name="nc_add">Add</string>
    <string name="nc_settings_wrong_account">Only current account can be reauthorized</string>
    <string name="nc_settings_no_talk_installed">Talk app is not installed on the server you tried to authenticate against</string>
    <string name="nc_settings_account_updated">Your already existing account was updated, instead of adding a new one</string>
    <string name="nc_account_scheduled_for_deletion">The account is scheduled for deletion, and cannot be changed</string>
    <string name="nc_settings_notification_sounds">Notification sounds</string>
    <string name="nc_settings_call_ringtone">One-on-One Calls</string>
    <string name="nc_settings_call_ringtone_key" translatable="false">call_ringtone</string>
    <string name="nc_settings_other_notifications_ringtone">Other</string>
    <string name="nc_settings_message_ringtone_key" translatable="false">message_ringtone</string>
    <string name="nc_settings_default_ringtone" translatable="false">Librem by feandesign</string>
    <string name="nc_settings_no_ringtone">No sound</string>
    <string name="nc_settings_vibrate">Vibrate</string>
    <string name="nc_settings_vibrate_desc">Phone will vibrate unless it\'s silenced</string>
    <string name="nc_settings_vibrate_key" translatable="false">notifications_vibrate</string>
    <string name="nc_settings_appearance">Appearance</string>
    <string name="nc_settings_theme_title">Theme</string>
    <string name="nc_settings_theme_key">theme</string>
    <string name="nc_settings_theme_battery_saver_key" translatable="false">battery_saver</string>
    <string name="nc_settings_theme_follow_system_key" translatable="false">follow_system</string>
    <string name="nc_settings_theme_light_key" translatable="false">night_no</string>
    <string name="nc_settings_theme_follow_system">Use system default</string>
    <string name="nc_settings_theme_battery_saver">Set by Battery Saver</string>
    <string name="nc_settings_theme_light">Light</string>
    <string name="nc_settings_theme_dark">Dark</string>
    <string name="nc_settings_privacy">Privacy</string>
    <string name="nc_settings_screen_lock_title">Screen lock</string>
    <string name="nc_settings_screen_lock_desc">Lock %1$s with Android screen lock or supported biometric method</string>
    <string name="nc_settings_screen_lock_key" translatable="false">screen_lock</string>
    <string name="nc_settings_screen_lock_timeout_title">Screen lock inactivity timeout</string>
    <string name="nc_none">None</string>
    <string name="nc_settings_screen_lock_timeout_key" translatable="false">screen_lock_timeout</string>
    <string name="nc_settings_screen_security_title">Screen security</string>
    <string name="nc_settings_screen_security_desc">Prevents screenshots in the recent list and inside the app</string>
    <string name="nc_settings_screen_security_key" translatable="false">screen_security</string>
    <string name="nc_settings_incognito_keyboard_title">Incognito keyboard</string>
    <string name="nc_settings_incognito_keyboard_desc">Instructs keyboard to disable personalized learning (without guarantees)</string>
    <string name="nc_settings_incognito_keyboard_key" translatable="false">incognito_keyboard</string>
    <string name="nc_settings_link_previews_title">Show link previews</string>
    <string name="nc_settings_link_previews_desc">Allows previews of content from received links for supported services</string>
    <string name="nc_settings_link_previews_key" translatable="false">link_previews</string>
    <string name="nc_locked">Tap to unlock</string>
    <string name="nc_screen_lock_timeout_30">30 seconds</string>
    <string name="nc_screen_lock_timeout_60">1 minute</string>
    <string name="nc_screen_lock_timeout_300">5 minutes</string>
    <string name="nc_screen_lock_timeout_600">10 minutes</string>
    <string name="nc_screen_lock_timeout_thirty">30</string>
    <string name="nc_screen_lock_timeout_sixty">60</string>
    <string name="nc_screen_lock_timeout_three_hundred">300</string>
    <string name="nc_screen_lock_timeout_six_hundred">600</string>
    <string name="nc_biometric_unlock">Unlock %1$s</string>
    <string name="nc_cancel">Cancel</string>
    <string name="nc_no_proxy">No proxy</string>
    <string name="nc_username">Username</string>
    <string name="nc_password">Password</string>
    <string name="nc_conversation_link">Conversation link</string>
    <string name="nc_new_password">New password</string>
    <string name="nc_wrong_password">Wrong password</string>
    <string name="nc_about">About</string>
    <string name="nc_privacy">Privacy</string>
    <string name="nc_get_source_code">Get source code</string>
    <string name="nc_license_title">License</string>
    <string name="nc_license_summary">GNU General Public License, Version 3</string>
    <string name="nc_select_an_account">Select an account</string>
    <string name="nc_start_conversation">Start a conversation</string>
    <string name="nc_configure_room">Configure conversation</string>
    <string name="nc_leave">Leave conversation</string>
    <string name="nc_rename">Rename conversation</string>
    <string name="nc_set_password">Set a password</string>
    <string name="nc_change_password">Change password</string>
    <string name="nc_clear_password">Clear password</string>
    <string name="nc_share_link">Share link</string>
    <string name="nc_share_link_via">Share link via</string>
    <string name="nc_make_call_public">Make conversation public</string>
    <string name="nc_make_call_private">Make conversation private</string>
    <string name="nc_delete_call">Delete conversation</string>
    <string name="nc_delete">Delete</string>
    <string name="nc_delete_conversation_default">Please confirm your intent to remove the conversation.</string>
    <string name="nc_delete_conversation_one2one">If you delete the conversation, it will also be
        deleted for %1$s.</string>
    <string name="nc_delete_conversation_more">If you delete the conversation, it will also be deleted for all other participants.</string>
    <string name="nc_new_conversation">New conversation</string>
    <string name="nc_join_via_link">Join with a link</string>
    <string name="nc_join_via_web">Join via web</string>
    <string name="nc_add_to_favorites">Add to favorites</string>
    <string name="nc_remove_from_favorites">Remove from favorites</string>
    <string name="nc_select_contacts">Select contacts</string>
    <string name="nc_contacts_done">Done</string>
    <string name="nc_camera_permission_permanently_denied">To enable video communication please grant \"Camera\" permission in the system settings.</string>
    <string name="nc_microphone_permission_permanently_denied">To enable voice communication please grant \"Microphone\" permission in the system settings.</string>
    <string name="nc_permissions_settings">Open settings</string>
    <string name="nc_connecting_call">Connecting…</string>
    <string name="nc_calling">Calling…</string>
    <string name="nc_incoming_call">Incoming call from</string>
    <string name="nc_nick_guest">Guest</string>
    <string name="nc_public_call">New public conversation</string>
    <string name="nc_public_call_explanation">Public conversations let you invite people from outside through a
        specially crafted link.</string>
    <string name="nc_call_timeout">No response in 45 seconds, tap to try again</string>
    <string name="nc_call_reconnecting">Reconnecting…</string>
    <string name="nc_offline">Currently offline, please check your connectivity</string>
    <string name="nc_leaving_call">Leaving call…</string>
    <string name="nc_notification_settings">Notification settings</string>
    <string name="nc_plain_old_messages">Messages</string>
    <string name="nc_mute_calls">Mute calls</string>
    <string name="nc_mute_calls_desc">Incoming calls will be ignored</string>
    <string name="nc_important_conversation">Important conversation</string>
    <string name="nc_important_conversation_desc">Calls and message notifications will be shown even while in Do not disturb mode (follows system "Allow priority interruptions only" configuration)</string>
</resources>