<?xml version="1.0" encoding="utf-8"?><!--
  ~ Nextcloud Talk application
  ~
  ~ @author Mario Danic
  ~ Copyright (C) 2017 Mario Danic
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<com.yarolegovich.mp.MaterialPreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apc="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lookNFeelScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yarolegovich.mp.MaterialPreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        apc:mpc_title="@string/nc_settings_appearance"
        apc:mpc_title_color="@color/colorPrimary">

        <com.yarolegovich.mp.MaterialChoicePreference
            android:id="@+id/settings_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="@string/nc_default_theme"
            apc:mp_entry_descriptions="@array/theme_descriptions"
            apc:mp_entry_values="@array/theme_entry_values"
            apc:mp_key="@string/nc_settings_theme_key"
            apc:mp_show_value="onBottom"
            apc:mp_title="@string/nc_settings_theme_title" />

    </com.yarolegovich.mp.MaterialPreferenceCategory>

    <com.yarolegovich.mp.MaterialPreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        apc:mpc_title="@string/nc_settings_notification_sounds"
        apc:mpc_title_color="@color/colorPrimary">

        <com.yarolegovich.mp.MaterialStandardPreference
            android:id="@+id/settings_call_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_key="@string/nc_settings_call_ringtone_key"
            apc:mp_title="@string/nc_settings_call_ringtone" />

        <com.yarolegovich.mp.MaterialStandardPreference
            android:id="@+id/settings_message_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_key="@string/nc_settings_message_ringtone_key"
            apc:mp_title="@string/nc_settings_other_notifications_ringtone" />

        <com.yarolegovich.mp.MaterialSwitchPreference
            android:id="@+id/settings_always_vibrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="@bool/value_true"
            apc:mp_key="@string/nc_settings_vibrate_key"
            apc:mp_summary="@string/nc_settings_vibrate_desc"
            apc:mp_title="@string/nc_settings_vibrate" />

    </com.yarolegovich.mp.MaterialPreferenceCategory>

</com.yarolegovich.mp.MaterialPreferenceScreen>
