<?xml version="1.0" encoding="utf-8"?><!--
  ~ Nextcloud Talk application
  ~
  ~ @author Mario Danic
  ~ Copyright (C) 2017-2018 Mario Danic <mario@lovelyhq.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<com.yarolegovich.mp.MaterialPreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apc="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notification_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.yarolegovich.mp.MaterialPreferenceCategory
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        apc:mpc_title="@string/nc_notification_settings"
        apc:mpc_title_color="@color/textColorMaxContrast">

        <com.yarolegovich.mp.MaterialSwitchPreference
            android:id="@+id/conversation_info_priority_conversation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="false"
            apc:mp_key="important_conversation"
            apc:mp_title="@string/nc_important_conversation"
            apc:mp_summary="@string/nc_important_conversation_desc"/>

        <com.yarolegovich.mp.MaterialChoicePreference
            android:id="@+id/conversation_info_message_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_entry_descriptions="@array/message_notification_levels"
            apc:mp_entry_values="@array/message_notification_levels_entry_values"
            apc:mp_key="message_notification_level"
            apc:mp_show_value="onBottom"
            apc:mp_title="@string/nc_plain_old_messages"></com.yarolegovich.mp.MaterialChoicePreference>

        <com.yarolegovich.mp.MaterialSwitchPreference
            android:id="@+id/muteCalls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            apc:mp_default_value="false"
            apc:mp_key="mute_calls"
            apc:mp_title="@string/nc_mute_calls"
            apc:mp_summary="@string/nc_mute_calls_desc"/>

    </com.yarolegovich.mp.MaterialPreferenceCategory>

</com.yarolegovich.mp.MaterialPreferenceScreen>
